# app/Http/Controllers/tagController.php
@@ -7,7 +7,7 @@ use App\Models\Tag;
 use Illuminate\Http\Request;
 use Illuminate\Http\Response;
 
-class tagController extends Controller {
+class TagController extends Controller {
 
     /**
      * @OA\Get(
@@ -20,48 +20,221 @@ class tagController extends Controller {
      *
      *
      *
-     *      @OA\Response(
-     *          response=200,
-     *          description="New Category Successfully",
      *
-     *      ),
-     *
-     *
-     *      @OA\Response(
-     *          response=201,
-     *          description="New Category Successfully",
-     *
-     *      ),
-     *
-     *
-     *     @OA\RequestBody(
-     *         @OA\JsonContent(
-     *               required={"name", "description", "type_location", "shop_postal_code", "shop_main_phone_number", "shop_photo"},
-     *               @OA\Property(
-     *                  property="file",
-     *                  type="string",
-     *                  example="file",
-     *                  format="binary",
-     *                  description="file",
-     *                  default="null",
-     *                  nullable=true,
-     *               ),
+     *     @OA\Parameter(
+     *         name="sort",
+     *         in="query",
+     *         description="Tags to sort by",
+     *         required=false,
+     *         example="id",
+     *         @OA\Schema(
+     *           type="string",
      *         ),
+     *         style="form"
+     *     ),
+     *
+     *     @OA\Parameter(
+     *         name="order",
+     *         in="query",
+     *         description="Tags to order by 'asc|desc'",
+     *         required=false,
+     *         example="asc",
+     *         @OA\Schema(
+     *           type="string",
+     *         ),
+     *         style="form"
+     *     ),
+     *
+     *
+     *     @OA\Parameter(
+     *         name="page",
+     *         in="query",
+     *         description="Tags to paginate for page number",
+     *         required=false,
+     *         example="1",
+     *         @OA\Schema(
+     *           type="number",
+     *         ),
+     *         style="form"
+     *     ),
+     *
+     *     @OA\Parameter(
+     *         name="limit",
+     *         in="query",
+     *         description="Tags for number of limit item in paginate result",
+     *         required=false,
+     *         example="10",
+     *         @OA\Schema(
+     *           type="number",
+     *         ),
+     *         style="form"
      *     ),
      *
      *
      *
      *
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="data of result",
+     *
+     *          @OA\JsonContent(
+     *              type="object",
+     *
+     *              @OA\Property(property="current_page", type="number", example="1"),
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="array",
+     *                  @OA\Items(
+     *                      type="object",
+     *                      @OA\Property(
+     *                         property="category_name",
+     *                         type="string",
+     *                         example="category_name",
+     *                      ),
+     *                      @OA\Property(
+     *                         property="id",
+     *                         type="integer",
+     *                         example="11",
+     *                      ),
+     *                  ),
+     *
+     *                  @OA\Items(
+     *                      type="object",
+     *                      @OA\Property(
+     *                         property="category_name",
+     *                         type="string",
+     *                         example="category_name",
+     *                      ),
+     *                      @OA\Property(
+     *                         property="id",
+     *                         type="integer",
+     *                         example="12",
+     *                      ),
+     *                  ),
+     *
+     *              ),
+     *              @OA\Property(property="first_page_url", type="string", example="http://127.0.0.1:8001/api/v1/shop/categories?page=1"),
+     *              @OA\Property(property="last_page_url", type="string", example="http://127.0.0.1:8001/api/v1/shop/categories?page=5"),
+     *              @OA\Property(property="last_page", type="number", example="5"),
+     *              @OA\Property(property="from", type="number", example="1"),
+     *              @OA\Property(
+     *                  property="links",
+     *                  example="{'url': null,'label': 'Previous','active': false},{'url': 'http://127.0.0.1:8001/api/v1/shop/categories?page=1','label': '1','active': true},{'url': null,'label': 'Next','active': false}",
+     *
+     *
+     *
+     *
+     *              ),
+     *              @OA\Property(property="next_page_url", type="string", example="http://127.0.0.1:8001/api/v1/shop/categories?page=2"),
+     *              @OA\Property(property="prev_page_url", type="string", example="null"),
+     *              @OA\Property(property="path", type="string", example="http://127.0.0.1:8001/api/v1/shop/categories"),
+     *              @OA\Property(property="per_page", type="string", example="'10'"),
+     *              @OA\Property(property="to", type="number", example="3"),
+     *              @OA\Property(property="total", type="number", example="13"),
+     *          ),
+     *      ),
+     *
+     *
+     *
+     *      @OA\Response(
+     *          response=201,
+     *          description="data of result",
+     *          description="data of result",
+     *
+     *          @OA\JsonContent(
+     *              type="object",
+     *
+     *              @OA\Property(property="current_page", type="number", example="1"),
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="array",
+     *                  @OA\Items(
+     *                      type="object",
+     *                      @OA\Property(
+     *                         property="category_name",
+     *                         type="string",
+     *                         example="category_name",
+     *                      ),
+     *                      @OA\Property(
+     *                         property="id",
+     *                         type="integer",
+     *                         example="11",
+     *                      ),
+     *                  ),
+     *
+     *                  @OA\Items(
+     *                      type="object",
+     *                      @OA\Property(
+     *                         property="category_name",
+     *                         type="string",
+     *                         example="category_name",
+     *                      ),
+     *                      @OA\Property(
+     *                         property="id",
+     *                         type="integer",
+     *                         example="12",
+     *                      ),
+     *                  ),
+     *
+     *              ),
+     *              @OA\Property(property="first_page_url", type="string", example="http://127.0.0.1:8001/api/v1/shop/categories?page=1"),
+     *              @OA\Property(property="last_page_url", type="string", example="http://127.0.0.1:8001/api/v1/shop/categories?page=5"),
+     *              @OA\Property(property="last_page", type="number", example="5"),
+     *              @OA\Property(property="from", type="number", example="1"),
+     *              @OA\Property(
+     *                  property="links",
+     *                  example="{'url': null,'label': 'Previous','active': false},{'url': 'http://127.0.0.1:8001/api/v1/shop/categories?page=1','label': '1','active': true},{'url': null,'label': 'Next','active': false}",
+     *
+     *
+     *
+     *
+     *              ),
+     *              @OA\Property(property="next_page_url", type="string", example="http://127.0.0.1:8001/api/v1/shop/categories?page=2"),
+     *              @OA\Property(property="prev_page_url", type="string", example="null"),
+     *              @OA\Property(property="path", type="string", example="http://127.0.0.1:8001/api/v1/shop/categories"),
+     *              @OA\Property(property="per_page", type="string", example="'10'"),
+     *              @OA\Property(property="to", type="number", example="3"),
+     *              @OA\Property(property="total", type="number", example="13"),
+     *          ),
+     *      ),
+     *
+     *
+     *
+     *
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=401, description="Unauthorized"),
+     *      @OA\Response(response=403, description="Forbidden"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     *      @OA\Response(response=405, description="Method Not Allowed"),
+     *      @OA\Response(response=406, description="Not Acceptable"),
+     *      @OA\Response(response=407, description="Proxy Authentication Required"),
+     *      @OA\Response(response=410, description="Resource Gone"),
+     *
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Entity",
+     *          @OA\JsonContent()
+     *       ),
+     *
+     *      @OA\Response(response=423, description="Resource Locked"),
+     *      @OA\Response(response=429, description="Too Many Requests"),
+     *      @OA\Response(response=451, description="Unavailable For Legal Reasons"),
+     *
+     *      @OA\Response(response=500, description="Internal Server"),
+     *      @OA\Response(response=502, description="Bad Gateway"),
+     *      @OA\Response(response=503, description="Service Unavailable"),
+     *      @OA\Response(response=504, description="Gateway Timeout"),
+     *      @OA\Response(response=505, description="HTTP Version Not Supported"),
      *      @OA\Response(response=511, description="Network Authentication Required"),
      *
      *     security={
      *         {"bearer": {}}
      *     },
      *
-     *
-     *
-     *
      * ),
+     *
+
      *
      */
     /**
