# storage/api-docs/api-docs.json
@@ -2464,39 +2464,258 @@
                 "summary": "get all tags. => for shopkeeper and system admin",
                 "description": "get all tags",
                 "operationId": "get categories",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "name",
-                                    "description",
-                                    "type_location",
-                                    "shop_postal_code",
-                                    "shop_main_phone_number",
-                                    "shop_photo"
-                                ],
-                                "properties": {
-                                    "file": {
-                                        "nullable": true,
-                                        "description": "file",
-                                        "type": "string",
-                                        "format": "binary",
-                                        "default": "null",
-                                        "example": "file"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
+                "parameters": [
+                    {
+                        "name": "sort",
+                        "in": "query",
+                        "description": "Tags to sort by",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "id"
+                    },
+                    {
+                        "name": "order",
+                        "in": "query",
+                        "description": "Tags to order by 'asc|desc'",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "asc"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Tags to paginate for page number",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "number"
+                        },
+                        "example": "1"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Tags for number of limit item in paginate result",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "number"
+                        },
+                        "example": "10"
                     }
-                },
+                ],
                 "responses": {
                     "200": {
-                        "description": "New Category Successfully"
+                        "description": "data of result",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "current_page": {
+                                            "type": "number",
+                                            "example": "1"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "category_name": {
+                                                        "type": "string",
+                                                        "example": "category_name"
+                                                    },
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": "11"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        },
+                                        "first_page_url": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8001/api/v1/shop/categories?page=1"
+                                        },
+                                        "last_page_url": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8001/api/v1/shop/categories?page=5"
+                                        },
+                                        "last_page": {
+                                            "type": "number",
+                                            "example": "5"
+                                        },
+                                        "from": {
+                                            "type": "number",
+                                            "example": "1"
+                                        },
+                                        "links": {
+                                            "example": "{'url': null,'label': 'Previous','active': false},{'url': 'http://127.0.0.1:8001/api/v1/shop/categories?page=1','label': '1','active': true},{'url': null,'label': 'Next','active': false}"
+                                        },
+                                        "next_page_url": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8001/api/v1/shop/categories?page=2"
+                                        },
+                                        "prev_page_url": {
+                                            "type": "string",
+                                            "example": "null"
+                                        },
+                                        "path": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8001/api/v1/shop/categories"
+                                        },
+                                        "per_page": {
+                                            "type": "string",
+                                            "example": "'10'"
+                                        },
+                                        "to": {
+                                            "type": "number",
+                                            "example": "3"
+                                        },
+                                        "total": {
+                                            "type": "number",
+                                            "example": "13"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "201": {
-                        "description": "New Category Successfully"
+                        "description": "data of result",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "current_page": {
+                                            "type": "number",
+                                            "example": "1"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "category_name": {
+                                                        "type": "string",
+                                                        "example": "category_name"
+                                                    },
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": "11"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        },
+                                        "first_page_url": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8001/api/v1/shop/categories?page=1"
+                                        },
+                                        "last_page_url": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8001/api/v1/shop/categories?page=5"
+                                        },
+                                        "last_page": {
+                                            "type": "number",
+                                            "example": "5"
+                                        },
+                                        "from": {
+                                            "type": "number",
+                                            "example": "1"
+                                        },
+                                        "links": {
+                                            "example": "{'url': null,'label': 'Previous','active': false},{'url': 'http://127.0.0.1:8001/api/v1/shop/categories?page=1','label': '1','active': true},{'url': null,'label': 'Next','active': false}"
+                                        },
+                                        "next_page_url": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8001/api/v1/shop/categories?page=2"
+                                        },
+                                        "prev_page_url": {
+                                            "type": "string",
+                                            "example": "null"
+                                        },
+                                        "path": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8001/api/v1/shop/categories"
+                                        },
+                                        "per_page": {
+                                            "type": "string",
+                                            "example": "'10'"
+                                        },
+                                        "to": {
+                                            "type": "number",
+                                            "example": "3"
+                                        },
+                                        "total": {
+                                            "type": "number",
+                                            "example": "13"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    },
+                    "405": {
+                        "description": "Method Not Allowed"
+                    },
+                    "406": {
+                        "description": "Not Acceptable"
+                    },
+                    "407": {
+                        "description": "Proxy Authentication Required"
+                    },
+                    "410": {
+                        "description": "Resource Gone"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "423": {
+                        "description": "Resource Locked"
+                    },
+                    "429": {
+                        "description": "Too Many Requests"
+                    },
+                    "451": {
+                        "description": "Unavailable For Legal Reasons"
+                    },
+                    "500": {
+                        "description": "Internal Server"
+                    },
+                    "502": {
+                        "description": "Bad Gateway"
+                    },
+                    "503": {
+                        "description": "Service Unavailable"
+                    },
+                    "504": {
+                        "description": "Gateway Timeout"
+                    },
+                    "505": {
+                        "description": "HTTP Version Not Supported"
                     },
                     "511": {
                         "description": "Network Authentication Required"
